# bcwork

./: .env.example  .gitignore  .prettierignore  commitlint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.tsbuildinfo  vercel.json
.github/workflows/: build-agent.yml
.playwright-mcp/: page-2026-05-01T21-11-56-523Z.yml  page-2026-05-02T16-24-23-023Z.yml  page-2026-05-02T16-27-13-418Z.yml  page-2026-05-15T20-37-51-834Z.yml
apps/agent/: index.html  package.json  vite.config.ts
apps/agent/src/: App.tsx
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/capabilities/: default.json
apps/agent/src-tauri/src/: capture.rs  db.rs  main.rs  sender.rs  state.rs
apps/agent/src/lib/: store.ts
apps/agent/src/screens/: DashboardScreen.tsx  (+1 more)
apps/extension/: package.json  wxt.config.ts
apps/web/: next.config.ts  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/.next/: app-build-manifest.json  build-manifest.json  postcss.js  prerender-manifest.json  routes-manifest.json  trace
apps/web/public/: manifest.json  sw.js
apps/web/scripts/: seed-platform-admin.ts
apps/web/src/: middleware.ts
scripts/: generate-logo.mjs
supabase/migrations/: 20260501000000_initial_schema.rollback.sql  20260501000000_initial_schema.sql  20260506000000_notifications_sent_by.sql  20260506020000_users_geo_location.sql  20260506050000_screenshots_table.sql  20260506060000_manual_time_entries.sql  20260506070000_work_schedule_alert_config.sql
(+704 files in other folders)
