[package]
name = "bcwork-agent"
version = "0.1.0"
description = "BCWork Activity Monitor Agent"
authors = ["BC Fabric SAS"]
edition = "2021"

[lib]
name = "bcwork_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bcwork-agent"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = { version = "0.23", features = ["highsierra"] }

[profile.release]
opt-level = "s"
panic = "abort"
codegen-units = 1
lto = true
strip = true
